[gd_scene load_steps=2 format=3 uid="uid://destgh3n5jh0d"]

[ext_resource type="Script" path="res://scoreboard.gd" id="1_c08yu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_c08yu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1149.0
offset_bottom = 649.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "scoreboard "
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScoresContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MainMenu"

[connection signal="pressed" from="VBoxContainer/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
